k8s/raw/network-policies/frontend-backend-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend-backend-network-policy
  # namespace: plug-namespace
spec:
  podSelector:
    matchLabels:
      plug: backend
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          plug: frontend
    ports:
    - protocol: TCP
      port: 8080
